syntax = "proto3";

package sensor;

import "internalapi/central/virtual_machine.proto";

option go_package = "./internalapi/sensor;sensor";

message UpsertVirtualMachineRequest {
  central.VirtualMachine virtual_machine = 1;
}

message UpsertVirtualMachineResponse {
  bool success = 1;
}

// A Sensor service that allows Admission Controller to retrieve images from Sensor
service VirtualMachineService {
  rpc UpsertVirtualMachine(UpsertVirtualMachineRequest) returns (UpsertVirtualMachineResponse) {}
}
